# Dictato

./: .env.example  .gitignore  HOSTING.md  LICENSE  MACRO_TRACKING_RESEARCH.md  README.md  pyproject.toml
app/: auth.py  config.py  database.py  main.py  models.py
app/routers/: admin.py  agent.py  auth.py  coach.py  foods.py  issues.py  log.py  photo.py  push.py  recipes.py  reminders.py  voice.py
app/services/: agent.py  ai.py  ai_usage.py  coach.py  fatsecret.py  food_lookup.py  llm.py  logging.py  nutrition_guard.py  portion.py  profile.py  push.py  recipes.py  scheduler.py  stt.py  triage.py  voice_parse.py
deploy/: install-dictato-tasks.ps1  run-dictato.ps1  run-tunnel.ps1
deploy/cloudflared/: config.example.yml
scripts/: calibrate_confidence.py  eval_grounding.py  eval_menumatch.py  eval_photo.py  eval_photo_real.py  export_dataset.py  gen_vapid.py  reset_password.py
static/: app.js  index.html  manifest.json  style.css  sw.js
tests/: conftest.py  test_admin.py  test_agent.py  test_auth.py  test_coach.py  test_dashboard.py  test_fatsecret.py  test_foods.py  test_llm.py  test_log.py  test_nutrition_guard.py  test_photo.py  test_portion.py  test_recipes.py  test_reminders.py  test_stt.py  test_voice.py
